syntax = "proto3";

option csharp_namespace = "grpc_challange";

package books;

service Books {
    rpc GetAuthor(BookTitle) returns (BookAuthor);
}

message BookTitle {
    string title = 1;
}

message BookAuthor {
    string author = 1;
}